<?xml version="1.0"?>
<package format="2">
  <n>arjuna_description</n>
  <version>0.1.0</version>
  <description>URDF description of the Arjuna AMR robot</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>xacro</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>
</package>
