<?xml version="1.0"?>
<package format="2">
  <name>arjuna_sim</name>
  <version>0.1.0</version>
  <description>Gazebo simulator for the Arjuna AMR (NEWRRO TECH LLP)</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>gazebo_ros</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>
  <depend>xacro</depend>
  <depend>rviz</depend>

  <exec_depend>arjuna_description</exec_depend>
</package>
